# backend/docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /api
 definitions:
   model.Assignment:
     properties:
@@ -106,14 +107,69 @@ definitions:
     - role
     - username
     type: object
+host: localhost:8080
 info:
   contact: {}
+  description: API для обучающего приложения ProjectSchool
+  title: ProjectSchool API
+  version: "1.0"
 paths:
+  /assignments:
+    post:
+      consumes:
+      - application/json
+      description: 'Создает новое задание для курса. Требуется JWT-токен. Доступно
+        только для ролей: teacher, admin.'
+      parameters:
+      - description: Данные задания
+        in: body
+        name: assignment
+        required: true
+        schema:
+          $ref: '#/definitions/model.Assignment'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: message, assignment
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "403":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Создать задание
+      tags:
+      - assignments
   /assignments/{id}/submit:
     post:
       consumes:
       - application/json
-      description: Отправляет решение для задания (только для студентов)
+      description: 'Отправляет решение для задания. Требуется JWT-токен. Доступно
+        только для роли: student.'
       parameters:
       - description: ID задания
         in: path
@@ -160,6 +216,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Отправить решение
       tags:
       - submissions
@@ -167,7 +225,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Возвращает список всех курсов с пагинацией
+      description: 'Возвращает список всех курсов с пагинацией. Требуется JWT-токен.
+        Доступно для ролей: student, teacher, admin.'
       parameters:
       - default: 10
         description: Лимит записей
@@ -194,19 +253,28 @@ paths:
             additionalProperties:
               type: string
             type: object
+        "401":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
         "500":
           description: error
           schema:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Получить список курсов
       tags:
       - courses
     post:
       consumes:
       - application/json
-      description: Создает новый курс (только для учителей и админов)
+      description: 'Создает новый курс. Требуется JWT-токен. Доступно только для ролей:
+        teacher, admin.'
       parameters:
       - description: Данные курса
         in: body
@@ -246,6 +314,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Создать курс
       tags:
       - courses
@@ -253,7 +323,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Возвращает данные курса по его ID
+      description: 'Возвращает данные курса по его ID. Требуется JWT-токен. Доступно
+        для ролей: student, teacher, admin.'
       parameters:
       - description: ID курса
         in: path
@@ -273,6 +344,12 @@ paths:
             additionalProperties:
               type: string
             type: object
+        "401":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
         "404":
           description: error
           schema:
@@ -285,15 +362,61 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Получить курс
       tags:
       - courses
+  /courses/{id}/assignments:
+    get:
+      consumes:
+      - application/json
+      description: 'Возвращает список заданий для указанного курса. Требуется.JWT-токен.
+        Доступно для ролей: student, teacher, admin.'
+      parameters:
+      - description: ID курса
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Assignment'
+            type: array
+        "400":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Получить список заданий
+      tags:
+      - assignments
   /leaderboard:
     get:
       consumes:
       - application/json
-      description: Возвращает топ-10 пользователей по баллам, опционально для конкретного
-        курса
+      description: 'Возвращает топ-10 пользователей по баллам, опционально для конкретного
+        курса. Требуется JWT-токен. Доступно для ролей: student, teacher, admin.'
       parameters:
       - description: ID курса для фильтрации
         in: query
@@ -326,6 +449,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Получить таблицу лидеров
       tags:
       - leaderboard
@@ -411,7 +536,8 @@ paths:
     put:
       consumes:
       - application/json
-      description: Устанавливает оценку для решения (только для преподавателей и админов)
+      description: 'Устанавливает оценку для решения. Требуется JWT-токен. Доступно
+        только для ролей: teacher, admin.'
       parameters:
       - description: ID решения
         in: path
@@ -465,6 +591,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Установить оценку
       tags:
       - submissions
@@ -472,7 +600,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Возвращает данные текущего аутентифицированного пользователя
+      description: 'Возвращает данные текущего аутентифицированного пользователя.
+        Требуется JWT-токен. Доступно для ролей: student, teacher, admin.'
       produces:
       - application/json
       responses:
@@ -498,6 +627,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Получить профиль пользователя
       tags:
       - users
@@ -505,7 +636,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Возвращает все решения текущего аутентифицированного пользователя
+      description: 'Возвращает все решения текущего аутентифицированного пользователя.
+        Требуется JWT-токен. Доступно для ролей: student, teacher, admin.'
       produces:
       - application/json
       responses:
@@ -527,7 +659,14 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Получить решения пользователя
       tags:
       - submissions
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
